fix keypoints popup spacing

--- a/popup.css
+++ b/popup.css
@@ -1,17 +1,8 @@
-html {
+body {
   width: 280px;
   height: 200px;
-}
-
-body {
-  color: white;
-  background-color: #1c202e;
-  width: 100%;
-  height: 100%;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  padding-bottom: 30px;
+  padding: 0px;
+  margin: 0px;
 }
 
 h1 {
@@ -26,7 +17,18 @@ button {
   border: 1px solid #333333;
 }
 
-#button-group {
+.container {
+  width: 100%;
+  height: 100%;
+  color: white;
+  background-color: #1c202e;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  padding-bottom: 30px;
+}
+
+.button-group {
   display: flex;
   flex-direction: column;
   justify-content: center;
